--- a/styles/stylesheets/bestiary.less
+++ b/styles/stylesheets/bestiary.less
@@ -23,6 +23,13 @@
           border-color: @darkBorder;
         }
       }
+
+      &.application {
+        .window-content {
+          backdrop-filter: none;
+          -webkit-backdrop-filter: none;
+        }
+      }
     }
   }
 }
